# newyeartracing

./: .gitignore  CMakeLists.txt  Makefile  README.md  camera.hpp  color.hpp  hittable.hpp  image.ppm  interval.hpp  main.cpp  material.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  vec3.hpp
